--- a/package.json
+++ b/package.json
@@ -8,20 +8,28 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
     "@stitches/react": "^1.2.8",
+    "@tanstack/react-query": "^5.12.2",
     "axios": "^1.6.2",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.10.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "prisma": "^5.6.0",
-    "typescript": "^5"
+    "@types/uuid": "^9.0.7",
+    "prisma": "^5.7.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2",
+    "uuid": "^9.0.1"
   }
 }
