--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ GOOGLE_CLIENT_SECRET=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
 GITHUB_ID=bc63330dadea94e522fc
 GITHUB_SECRET=cc69da94c16acf3101b42f730ae1aeadd7d1228f
 NEXTAUTH_SECRET="ASNTwj6PcKlvzhSkIos7EGj3Fv1mV3vM6CPpCqCgBVE="
-DATABASE_URL="postgresql://joaovsousac:7WZA1TYCdFik@ep-long-butterfly-a5luw3k2-pooler.us-east-2.aws.neon.tech/bookwise?sslmode=require&pgbouncer=true"
-DIRECT_URL="postgresql://joaovsousac:7WZA1TYCdFik@ep-long-butterfly-a5luw3k2.us-east-2.aws.neon.tech/bookwise?sslmode=require"
+DATABASE_URL="postgresql://joaovsousac:M0DgHmNKdza8@ep-yellow-shadow-a58id1ti-pooler.us-east-2.aws.neon.tech/bookwise?sslmode=require&pgbouncer=true"
+DIRECT_URL="postgresql://joaovsousac:M0DgHmNKdza8@ep-yellow-shadow-a58id1ti.us-east-2.aws.neon.tech/bookwise?sslmode=require"
